@@ -1,5 +1,6 @@
 2.0.M01
 -------
+o BREAKING CHANGE: It is no longer possible to use parameterized identifiers in START
 o Added the possibility to set labels on and remove labels from nodes
 o Now uses the labels specified in MATCH while matching
 o Supports label matching with ("|" syntax) in MATCH
